Resized container height to fix spacing in the content

--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -7,6 +7,6 @@
 	box-shadow: 0px 55px 61px -55px rgba(0, 0, 0, 0.34);
 	background-color: #fff;
 
-	height: 37rem;
+	height: 33rem;
 	width: 50%;
 }
